2005-06-07  Leonard den Ottolander <leonard den ottolander nl>

	* main.c (midnight_callback): Also match tabs as empty command.

2005-06-07  Jindrich Novy  <jnovy@redhat.com>

	* command.c (command_callback): Fixed gcc warning about
	incompatible pointer types.

2005-06-07  Pavel Tsekov <ptsekov@gmx.net>

        * subshell.c (exit_subshell): Do not blindly perform cleanup.

2005-06-07  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_ccache_lookup): Replaced the min_nroff_column
	variable with a state chart, which makes the code clearer and
	fixes a bug in translating line/column pairs into offsets.
	* view.c (view_move_up): In text wrap mode, don't display parts
	of lines that only consist of the (invisible) newline character.
	* view.c (view_move_down): Likewise.

2005-05-31  David Martin  <dmartina@excite.com>

	* info.c: Localize label.

2005-05-29  Leonard den Ottolander  <leonard * den ottolander nl>

	* boxes.c: Added checkbox to VFS dialog to allow passive FTP
	over a proxy.

2005-05-29  Jindrich Novy  <jnovy@redhat.com>

	* main.c (midnight_callback): Fix blocking of panel cd-ing when
	there are only spaces on the command line.

2005-05-26  Roland Illig  <roland.illig@gmx.de>

	* view.c: Completely rewrote the cursor movement code. Now all
	cursor movement functions are based on two functions that
	translate file offsets into line/column pairs and vice versa.
	This change made it possible that the line/column is displayed
	in the status line. The beginning-of-line and end-of-line
	functions now work in text mode, too. Switching from non-wrap to
	wrap mode does not cause the whole file to be loaded.

2005-05-24  Roland Illig  <roland.illig@gmx.de>

	* widget.c: Fixed all but one casts on function pointers.
	* widget.h: Fixed prototype of input_callback().

2005-05-23  Roland Illig  <roland.illig@gmx.de>

	* help.c: Fixed the use of check_movement_keys(). This had been
	really ugly code, involving casts on incompatible functions.