@@ -250,17 +250,6 @@ void save_file_position (const char *filename, long line, long column);
 #define ISASCII(c) isascii(c)
 #endif
 
-/* this function allows you to write:
- * char *s = g_strdup("hello, world");
- * s = free_after(g_strconcat(s, s, (char *) NULL), s);
- */
-static inline char *
-free_after (char *result, char *string_to_free)
-{
-	g_free(string_to_free);
-	return result;
-}
-
 /* usage: str_cmp ("foo", !=, "bar") */
 #define str_cmp(a,rel,b) (strcmp ((a), (b)) rel 0)
 
